--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.20"
-tui = { version="0.16", default-features=false, features=['crossterm'] }
+crossterm = "0.23"
+tui = "0.17"
